interested questions updated
